--- a/src/Sidebar.css
+++ b/src/Sidebar.css
@@ -13,3 +13,9 @@
     padding: 10px;
     margin-right: auto;
 }
+
+.sidebar__title {
+    margin-left: 10px;
+    padding: 5px;
+    font-style: 12px;
+}
